register-openebs-io.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: register-openebs-io
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : register-openebs-io
    spec:
      containers:
        - name: register-openebs-io
          image: index.docker.io/amrishk/register-openebs-io:v1-9jan
          imagePullPolicy: Always
          ports:
          - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: register-openebs-io
  name: register-openebs-service
spec:
  type: NodePort
  ports:
  - name: register-openebs-io
    port: 80
    protocol: TCP
  selector:
    app: register-openebs-io
